fixed layout bugs

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -26,7 +26,7 @@
     list-style: none;
 
     & li {
-      display: flex;
+      display: flex !important;
       align-items: center;
       gap: 20px;
       margin-bottom: 30px;
